--- a/frontend/src/app/pages/wall/cell/widget/contents/completed-orders-content/completed-orders-content.component.scss
+++ b/frontend/src/app/pages/wall/cell/widget/contents/completed-orders-content/completed-orders-content.component.scss
@@ -88,42 +88,43 @@
 
       .id{
         position: relative;
+        width: 55px;
         left: 10px;
       }
 
       .address{
         position: relative;
         width: 300px;
-        left: 40px;
+        left: 25px;
       }
 
       .st{
         position: relative;
-        left: 95px;
+        left: 80px;
         width: 95px;
       }
 
       .zip{
         position: relative;
-        left: 170px;
+        left: 155px;
         width: 95px;
       }
 
       .floor{
         position: relative;
-        left: 250px;
+        left: 235px;
         width: 120px;
       }
 
       .volume{
         position: relative;
-        left: 268px;
+        left: 253px;
         width: 65px;
       }
 
       .time{
         position: relative;
-        left: 330px;
+        left: 315px;
       }
     }
   }
